qol
